Se terminaron de implementar los servicios relacionados a los reportes del cliente